tests/errors/codegen/fortran/randint.py
from numpy.random import randint

a = randint(10, size = 5)
